--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.1.0",
     "next-nprogress-bar": "^2.1.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
