--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.10.2",
+    "jose": "^5.2.3",
     "next": "14.1.0",
     "next-nprogress-bar": "^2.1.2",
     "react": "^18",
@@ -20,6 +22,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "prisma": "^5.10.2",
     "tailwindcss": "^3.3.0"
   }
 }
